samples/_failures_safe/1761712961_87d152_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f8ac8daf.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_f8ac8daf.c:134:13: error: expected expression at end of input
  134 |             if (!matrix_get(a, i,
      |             ^~
./samples/SAFE/__tmp_f8ac8daf.c:134:18: error: too few arguments to function ‘matrix_get’
  134 |             if (!matrix_get(a, i,
      |                  ^~~~~~~~~~
./samples/SAFE/__tmp_f8ac8daf.c:34:5: note: declared here
   34 | int matrix_get(struct Matrix *m, int row, int col, double *val) {
      |     ^~~~~~~~~~
./samples/SAFE/__tmp_f8ac8daf.c:134:13: error: expected declaration or statement at end of input
  134 |             if (!matrix_get(a, i,
      |             ^~
./samples/SAFE/__tmp_f8ac8daf.c:134:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f8ac8daf.c:134:13: error: expected declaration or statement at end of input
